@@ -1,3 +1,8 @@
+2004-10-31  Jim Blandy  <jimb@redhat.com>
+
+	* linux-target.c (linux_get_reg): When register REGNO doesn't exist, 
+	provide zeros for its value; don't use an uninitialized pointer.
+
 2004-10-29  Jim Blandy  <jimb@redhat.com>
 
 	* linux-target.c (linux_set_reg): Delete unused variables.
